--- a/generators/model/model.coffee.hbs
+++ b/generators/model/model.coffee.hbs
@@ -1,4 +1,4 @@
-class {{#camelize}}{{name}}{{/camelize}}Collection extends Backbone.Model
+class {{#camelize}}{{name}}{{/camelize}}Model extends Backbone.Model
 
 
-module.exports = {{#camelize}}{{name}}{{/camelize}}
+module.exports = {{#camelize}}{{name}}{{/camelize}}Model
