--- a/generators/view/view.coffee.hbs
+++ b/generators/view/view.coffee.hbs
@@ -8,4 +8,4 @@ class {{#camelize}}{{name}}{{/camelize}}View extends Backbone.View
     @$el.html(@template(@serialize()))
 
 
-module.exports = {{#camelize}}{{name}}{{/camelize}}
+module.exports = {{#camelize}}{{name}}{{/camelize}}View
